@@ -2,6 +2,8 @@ This file documents the revision history for Perl web application Veduta.
 
 {{$NEXT}}
 
+    - At the lowest level a click on the metadata opens the external viewer
+
 0.0.13    2016-06-11 16:35:03+02:00 Europe/Berlin
 
     - Additional informations in the list header are only shown in debug mode 
